force-app/main/default/objects/Employee_Detail__c/Employee_Detail__c.object-meta.xml
<CustomObject>
    <description>Store the details of human resource available in the company.</description>
    <label>Employee Detail</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>