force-app/main/default/objects/Employee_Detail__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter branch or major subdivision of your organization.</inlineHelpText>
    <label>Department Name</label>
    <referenceTo>Departments__c</referenceTo>
    <relationshipLabel>Employee Details</relationshipLabel>
    <relationshipName>Employee_Details</relationshipName>
    <type>Lookup</type>
</CustomField>