force-app/main/default/objects/Employee_Detail__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Designation of employee.</description>
    <inlineHelpText>Enter the position or business title in your organization&apos;s structure.</inlineHelpText>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>