force-app/main/default/objects/Employee_Detail__c/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <inlineHelpText>Enter the division name of the department in which the employee works.</inlineHelpText>
    <label>Division Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>