force-app/main/default/objects/Employee_Detail__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the person whom employee reports to.</description>
    <label>Reporting Manager</label>
    <referenceTo>Employee_Detail__c</referenceTo>
    <relationshipLabel>Employee Details</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>