force-app/main/default/objects/Employee_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_ID__c</columns>
    <columns>Email__c</columns>
    <columns>Department_Name__c</columns>
    <columns>Asset_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>